# lizhisim

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md
.devcontainer/: devcontainer.json  post-create.sh
common/hand-enumerator/: Cargo.toml
common/hand-enumerator/src/: generate_hand.rs  hand_enumerator.rs  lib.rs  main.rs
common/random-hand/: Cargo.toml
common/random-hand/src/: hand.rs  lib.rs  rng.rs
docs/: implementation_policy_for_rules.md
lizhisim/: Cargo.toml
lizhisim-hand-calc/: .gitignore  Cargo.toml  README.md  pyproject.toml
lizhisim-hand-calc/python/lizhisim_hand_calc/: __init__.py
lizhisim-hand-calc/src/: lib.rs
lizhisim-hand-tools/: Cargo.toml  README.md  pyproject.toml  xiangting.pyi
lizhisim-hand-tools/python/lizhisim_hand_tools/: tool.py
lizhisim-hand-tools/src/: bingpai.rs  constants.rs  fulu_mianzi.rs  lib.rs  shoupai.rs  test_utils.rs  tile.rs
lizhisim/src/: bipai.rs  fulu.rs  he.rs  lib.rs  macros.rs  main.rs  point.rs  rule.rs  shoupai.rs  tile.rs  tile_macros.rs
lizhisim/src/bipai/: bipai.rs  bipai_trait.rs  common.rs  constants.rs  core.rs  four_player.rs  provider.rs  random.rs
lizhisim/src/bipai/bipai/: four_player.rs
lizhisim/src/bipai/core/: four_player.rs
lizhisim/src/bipai/provider/: fixed.rs  random.rs
lizhisim/src/fulu/: an_gangzi.rs  daming_gangzi.rs  jia_gangzi.rs  mianzi.rs  ming_kezi.rs  ming_mianzi.rs  ming_shunzi.rs  tajia.rs
xiangting/: Cargo.toml  README.md
xiangting/benches/: bench.rs  benchmark.rs  calculate.rs  empty.rs
xiangting/src/: bingpai.rs  calculate.rs  constants.rs  lib.rs  mianzi.rs  qiduizi.rs  shisanyao.rs  shoupai.rs  standard.rs
