[package]
name = "lizhisim-hand-calc"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "lizhisim_hand_calc"
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
