[package]
name = "lizhisim-hand-tools"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "lizhisim_hand_tools"
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
thiserror.workspace = true
