[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "lizhisim-hand-tools"
version = "0.1.0"
description = "Rust bindings for mahjong hand calculator"
authors = [{ name = "Apricot S." }]
license = "MIT"
license-files = ["LICENSE", "THIRD-PARTY-NOTICES.md"]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["mahjong", "riichi"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "mahjong>=1.4.0",
]

[dependency-groups]
dev = [
    { include-group = "build" },
]
build = [
    "maturin>=1.9.6,<2",
]

[tool.maturin]
features = ["pyo3/extension-module"]
