[package]
name = "lizhisim"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "lizhisim"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
arrayvec = "0.7.6"
rand = "0.9.2"
thiserror.workspace = true
xiangting = "5.0.2"
