[package]
name = "hand-enumerator"
description = "A tool to enumerating all valid hands."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "hand_enumerator"
path = "src/lib.rs"
