[package]
name = "random-hand"
description = "A library for generate random hand."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "random_hand"
path = "src/lib.rs"

[dependencies]
mt19937 = "2.0.1"
rand = "0.8.5"
